<package>
  <name>dsp3000</name>
  <version>1.0.0</version>
  <description>A driver for the KVH DSP-3000 single-axis Fiber Optic Gyroscope.</description>
  <maintainer email="jschmidt@clearpathrobotics.com">Jeff Schmidt</maintainer>

  <license>BSD</license>

  <url type="website">None</url>

  <author>Jeff Schmidt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

<export>
    <cpp lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -ldsp3000" cflags="-I${prefix}/include"/>
</export>

</package>
